--- a/analysis-web/src/main/webapp/WEB-INF/web.xml
+++ b/analysis-web/src/main/webapp/WEB-INF/web.xml
@@ -44,14 +44,13 @@
     </servlet-mapping>
 
     <!--<servlet-mapping>-->
-        <!--<servlet-name>jsp</servlet-name>-->
-        <!--<url-pattern>*.html</url-pattern>-->
+    <!--<servlet-name>jsp</servlet-name>-->
+    <!--<url-pattern>*.html</url-pattern>-->
     <!--</servlet-mapping>-->
 
-    <!--<listener>-->
-        <!--<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>-->
-    <!--</listener>-->
-
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
 
 
     <filter>
@@ -67,11 +66,6 @@
         <filter-name>encodingFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-
-
-
-
-
 
 
     <welcome-file-list>
