--- a/analysis-core/src/main/resources/report.properties
+++ b/analysis-core/src/main/resources/report.properties
@@ -2,8 +2,8 @@ usage_override=appkey,platform,create_date
 usage_duration=appkey,platform,create_date,version,channel,segment
 usage_interval=appkey,platform,version,channel,create_date,segment
 usage_page_count=appkey,platform,create_date,version,channel
-sum_browsing_pagepath=appkey,platform,page,version,create_date
-sum_browsing_pagedetail=appkey,platform,version,create_date,page,frompage
+usage_pagepath=appkey,platform,page,version,create_date
+usage_pagedetail=appkey,platform,version,create_date,page,frompage
 usage_daily=appkey,platform,version,channel,create_date
 device_carrier=appkey,platform,version,channel,create_date,carrier
 device_country=appkey,platform,version,channel,create_date,country
@@ -12,9 +12,9 @@ device_network=appkey,platform,version,channel,create_date,networktype
 device_province=appkey,platform,version,channel,create_date,province
 device_resolution=appkey,platform,version,channel,create_date,screensize
 device_os=appkey,platform,version,channel,create_date,sysver
-sum_error=create_date,appkey,platform,version,model,networktype,sysver,error_log,stack_trace
-sum_event_keyvalue=appkey,platform,version,channel,eventKey,create_date
-sum_event=appkey,platform,versin,channel,eventKey,create_date
+error_info=create_date,appkey,platform,version,model,networktype,sysver,error_log,stack_trace
+event_keyvalue=appkey,platform,version,channel,eventKey,create_date
+event=appkey,platform,versin,channel,eventKey,create_date
 usage_hourly=appkey,platform,version,channel,create_date,create_hour
 sum_info=appkey
 retention_daily=appkey,platform,version,channel,create_date
