--- a/analysis-core/src/main/resources/report.properties
+++ b/analysis-core/src/main/resources/report.properties
@@ -15,7 +15,7 @@ device_os=appkey,platform,version,channel,create_date,sysver
 error_info=create_date,appkey,platform,version,model,networktype,sysver,error_log,stack_trace
 event_keyvalue=appkey,platform,version,channel,eventKey,create_date
 event=appkey,platform,versin,channel,eventKey,create_date
-usage_hourly=appkey,platform,version,channel,create_date,create_hour
+usage_hourly=appkey,platform,create_date,create_hour
 sum_info=appkey
 retention_daily=appkey,platform,version,channel,create_date
 retention_weekly=appkey,platform,version,channel,create_date
