添加活跃用户报表

--- a/analysis-core/src/main/resources/application.properties
+++ b/analysis-core/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 ############analysis configuration##############################
 analystics.sync.interval=5000
-analystics.mongodb.url=127.0.0.1:27017
+#analystics.mongodb.url=127.0.0.1:27017
+analystics.mongodb.url=116.31.122.23:10002
+
+
+
 analystics.task.number=8
 
 analystics.file.queue.datadir=/data/analystics/
