--- a/analysis-web/pom.xml
+++ b/analysis-web/pom.xml
@@ -11,6 +11,12 @@
 
     <dependencies>
 
+        <!--<dependency>-->
+            <!--<groupId>com.dempe.analysis</groupId>-->
+            <!--<artifactId>analysis-core</artifactId>-->
+            <!--<version>1.0.0</version>-->
+        <!--</dependency>-->
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
