--- a/analysis-common/pom.xml
+++ b/analysis-common/pom.xml
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>org.mapdb</groupId>
             <artifactId>mapdb</artifactId>
-            <version>3.0.0-M3</version>
+            <version>1.0.9</version>
         </dependency>
 
     </dependencies>
